# cricksocials

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  plan.md  pyproject.toml
.github/workflows/: ci.yml  match-day.yml
photos/: README.md
src/cricksocials/: __init__.py  captions.py  cli.py  config.py  image_gen.py  orchestrator.py  parser.py  scraper.py  state.py  stats.py
src/cricksocials/adapters/: __init__.py  output_sink.py  photo_source.py
templates/: loss_captions.txt  win_captions.txt
tests/: conftest.py  test_adapters_local.py  test_captions.py  test_cli.py  test_config.py  test_image_gen.py  test_orchestrator.py  test_parser.py  test_scraper.py  test_state.py  test_stats.py
tests/fixtures/: match_7303496.html
